Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(text)
        Test(v)
    end

    action Test(Integer var)
    end
end
